commentaire visible, poste aussi, ajout de commentaires, signalement impossible(bug)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,19 +40,23 @@
 h1{
     display: flex;
     justify-content: center;
-    margin-top: 10px!important;
+    margin-top: 10px !important;
 }
 
 #exemple-card{
-    display: flex!important;
+    display: flex !important;
 	flex-direction: row;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	position: relative;
+    flex-wrap: wrap;
+    justify-content: center;
 	width: 100%;
 }
 
 .card{
     display: flex;
-	position: relative;
+    margin: 20px;
+}
+
+form{
+    width: 400px;
+    margin-left: 10px;
 }
